<resources>
    <string name="app_name">ACME</string>
    <string name="str_nickname">Nickname</string>
    <string name="str_password">Password</string>
    <string name="str_register">Register</string>
    <string name="str_login">Login</string>
    <string name="str_name">Name</string>
    <string name="str_credit_card">Credit Card</string>
    <string name="str_nif">NIF</string>
    <string name="cart_icon_description">Cart Icon to access buying items</string>
    <string name="coffee_icon_description">Coffee icon</string>
    <string name="str_coffee_time">Coffee Time</string>
    <string name="str_home">Home</string>
    <string name="str_products">Products</string>
    <string name="str_account">Account</string>
    <string name="str_logout">Logout</string>
    <string name="str_x">X</string>
    <string name="add_cart">Add to Cart</string>
    <string name="card_img_description">Product image</string>
    <string name="str_select_quantity">Select Quantity</string>
    <string name="str_value_1">1</string>
    <string name="str_discount_description">5% Discount</string>
    <string name="str_free_coffee">1 Free Coffee</string>
    <string name="str_hash_tag">#</string>
    <string name="str_next">Next</string>
    <string name="str_voucher">Voucher</string>
    <string name="str_complete">Complete</string>
    <string name="str_order_complete">Order Complete</string>
</resources>