<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/dialog_background">

        <Button
            android:id="@+id/btn_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#00FFFFFF"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/str_x"
            android:textColor="@color/colorLight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_close_dialog"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/amatic_sc"
            android:labelFor="@+id/input_dialog_quantity"
            android:text="@string/str_select_quantity"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_dialog_quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints="quantity"
            android:fontFamily="@font/amatic_sc"
            android:inputType="number"
            android:text="@string/str_value_1"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textColorHighlight="@color/colorGunmetal"
            android:textColorLink="@color/colorBeige"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_dialog_add_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_dialog_quantity"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/add_cart"
            android:textColor="@color/colorGunmetal"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>