<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/card_img_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/card_right"
        android:layout_toEndOf="@+id/card_image"
        android:fontFamily="@font/amatic_sc"
        android:textIsSelectable="true"
        android:textColor="@color/colorLight"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_title"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/card_right"
        android:layout_toEndOf="@+id/card_image"
        android:fontFamily="@font/amatic_sc"
        android:textIsSelectable="true"
        android:textColor="@color/colorLight"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/card_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/add_cart"
            android:textColor="@color/colorGunmetal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/card_right_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_sc"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/input_quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:autofillHints="quantity"
            android:fontFamily="@font/amatic_sc"
            android:hint="@string/str_value_1"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textColorHighlight="@color/colorGunmetal"
            android:textColorLink="@color/colorBeige"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:fontFamily="@font/amatic_sc"
            android:text="@string/str_x"
            android:textColor="@color/colorBeige"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/card_image"
        android:background="@color/colorBeige" />

</RelativeLayout>