<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_cart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/cart_icon"
                android:translationX="-20dp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="0"
        android:background="@color/colorBeige" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/left_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorBeige" />

        </RelativeLayout>

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/amatic_sc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorLight"
            android:textSize="90sp" />

        <RelativeLayout
            android:id="@+id/right_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorBeige" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_weight="1"
        android:contentDescription="@string/coffee_icon_description"
        app:srcCompat="@drawable/home_coffee" />

    <TextView
        android:id="@+id/text_coffee_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/amatic_sc"
        android:padding="0dp"
        android:text="@string/str_coffee_time"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="70sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>